a2/stage/tests/reject/wSt_3.2.2.a_invalid.ul
void main() {
    int a;
    float b;
    c = b + a;    
}
